<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardView:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="1dp"
    cardView:cardUseCompatPadding="true"

    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"

            android:transitionName="@string/transicionPricture"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/backgroundtext_car"
            >
            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameCard"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_card"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/fristword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_text"
                    />
                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timecard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_text"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margintop_card"
                >
                <CheckBox
                    android:id="@+id/lickeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    />

                <TextView
                    android:id="@+id/likenmunberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likenumber_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_text"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>